sampler spacing fixes, getting things to fit

--- a/wp-content/themes/carnes-crossroads-2015/scss/_print.scss
+++ b/wp-content/themes/carnes-crossroads-2015/scss/_print.scss
@@ -92,12 +92,12 @@
         border-bottom: 10px double $gold;
 
         img {
-            width: 230px;
+            width: 220px;
         }
     }
 
     h1 {
-        margin: 30px auto 50px;
+        margin: 30px auto 40px;
         text-transform: uppercase;
         font-family: $minion;
         font-size: 2.2rem;
@@ -107,12 +107,12 @@
     }
 
     .listing-item {
-        margin-bottom: 75px;
+        margin-bottom: 65px;
+        padding: 0 40px;
 
         .listing-image {
-            height: 185px;
-            width: 90%;
-            background-size: cover;
+            height: 180px;
+            width: 100%;
             border: 1px solid $cc-green;
             background-repeat: no-repeat;
             background-position: center center;
@@ -144,7 +144,6 @@
         }
 
         p, ul {
-            width: 90%;
             font-family: $proxima;
             font-size: 0.9rem;
             color: #555555;
